[package]
name = "ipware"
version = "0.2.0"
edition = "2021"
description = "Http Header Client Ip Extraction Utility"
repository = "https://github.com/orhanbalci/ipware.git"
homepage = "https://github.com/orhanbalci"
keywords = ["http","client", "ip", "proxy"]
license = "MIT"
readme = "README.md"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
ip_rfc = "0.1.0"

[dev-dependencies]
spectral = "0.6"
